[gd_scene load_steps=2 format=3 uid="uid://quest_panel_001"]

[ext_resource type="Script" path="res://scripts/ui/QuestPanel.gd" id="1_0x0x0"]

[node name="QuestPanel" type="Panel"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
visible = false
script = ExtResource("1_0x0x0")

[node name="QuestContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="QuestTitle" type="Label" parent="QuestContainer"]
layout_mode = 2
text = "Quest Log"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="QuestContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Active Quests" type="ScrollContainer" parent="QuestContainer/TabContainer"]
layout_mode = 2

[node name="ActiveQuestsList" type="VBoxContainer" parent="QuestContainer/TabContainer/Active Quests"]
layout_mode = 2

[node name="Completed Quests" type="ScrollContainer" parent="QuestContainer/TabContainer"]
layout_mode = 2

[node name="CompletedQuestsList" type="VBoxContainer" parent="QuestContainer/TabContainer/Completed Quests"]
layout_mode = 2

[node name="Available Quests" type="ScrollContainer" parent="QuestContainer/TabContainer"]
layout_mode = 2

[node name="AvailableQuestsList" type="VBoxContainer" parent="QuestContainer/TabContainer/Available Quests"]
layout_mode = 2

[node name="CloseQuestButton" type="Button" parent="QuestContainer"]
layout_mode = 2
text = "Close" 